@@ -18,6 +18,7 @@ Build-Depends: cmake,
                libbamf3-dev (>= 0.5.3~bzr0),
                libboost-dev,
                libcairo2-dev,
+               libcompizconfig0-dev,
                libdbus-1-dev,
                libdbusmenu-glib-dev (>= 0.3.91),
                libdee-dev (>= 1.2.6),
