@@ -21,6 +21,9 @@ pre-start script
 
   echo "Using compiz profile '$compiz_profile'"
   initctl set-env -g COMPIZ_CONFIG_PROFILE="$compiz_profile"
+  export COMPIZ_CONFIG_PROFILE="$compiz_profile"
+
+  ${CMAKE_INSTALL_FULL_LIBDIR}/unity/unity-active-plugins-safety-check
 end script
 
 respawn
